aws/studentapp-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentapp
  labels:
    app: studentapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentapp
  template:
    metadata:
      labels:
        app: studentapp
    spec:
      containers:
        - name: studentapp
          image: codedecode25/restaurant-listing-service:4
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: studentapp-service
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: studentapp
